--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
   "name": "anarchyservice/group-manager-bot",
   "description": "PHP bot for telegram bots",
   "type": "project",
-  "minimum-stability": "dev",
-  "prefer-stable": true,
+  "minimum-stability": "stable",
   "license": "MIT",
   "keywords": ["telegram", "bot", "api", "oop", "PHP", "lib", "library", "php7"],
   "authors": [
