--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "anarchyservice/group-manager-bot",
   "description": "PHP bot for telegram bots",
   "type": "project",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "license": "MIT",
   "keywords": ["telegram", "bot", "api", "oop", "PHP", "lib", "library", "php7"],
   "authors": [
