--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
     "psr-4": {
       "AnarchyService\\": "src/"
     }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "cd vendor/anarchyService/anarchylib/ && git submodule init && git submodule update"
+    ]
   }
 }
