--- a/env.php.example
+++ b/env.php.example
@@ -8,8 +8,8 @@ putenv('VERSION=1');
 putenv('TOKEN=PutYourTokenHere');
 
 #replace {PutYourIDHere} with your token
-#if you need add many admins use ; delimiter like:
-#putenv('ADMINS=116948493;116948493');
+#if you need add many admins use , delimiter like:
+#putenv('ADMINS=116948493,116948493');
 putenv('ADMINS=PutYourIDHere');
 
 putenv('CHANNEL_USERNAME=AnarchyService');
