--- a/env.php.example
+++ b/env.php.example
@@ -16,6 +16,9 @@ putenv('CHANNEL_USERNAME=AnarchyService');
 
 putenv('BOT_USERNAME=AnarchyService_bot');
 
+putenv('DB=Json');
+putenv('jsonDBDir=Database');
+
 putenv('MEMORY_LIMIT=512M');
 
 putenv('TIMEZONE=Asia/Tehran');
