--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-  "name": "anarchyservice/group-manager-bot",
-  "description": "PHP bot for Managing Telegram Groups",
+  "name": "dyarweb/group-manager-bot",
+  "description": "PHP bot Telegram Groups manager",
   "type": "project",
   "license": "MIT",
-  "homepage": "https://AnarchyService.xyz",
-  "keywords": ["telegram", "bot", "api", "oop", "PHP", "lib", "library", "php7"],
+  "homepage": "https://DyarWeb.Com",
+  "keywords": ["telegram", "bot", "api", "oop", "PHP", "full", "project", "php7", "manager"],
   "authors": [
     {
       "name": "Alireza Sawari",
@@ -14,14 +14,13 @@
   ],
   "require": {
     "php": ">=7.4.0",
-    "anarchyservice/php-telegram-bot":"dev-master",
-    "ext-json": "*"
+    "dyarweb/php-telegram-bot":"dev-master"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "autoload": {
     "psr-4": {
-      "AnarchyService\\": "/"
+      "DyarWeb\\": "/"
     }
   }
 }
