--- a/env.php.example
+++ b/env.php.example
@@ -12,9 +12,9 @@ putenv('TOKEN=PutYourTokenHere');
 #putenv('ADMINS=116948493,116948493');
 putenv('ADMINS=PutYourIDHere');
 
-putenv('CHANNEL_USERNAME=AnarchyService');
+putenv('CHANNEL_USERNAME=DyarWeb');
 
-putenv('BOT_USERNAME=AnarchyService_bot');
+putenv('BOT_USERNAME=DyarWeb_bot');
 
 putenv('DB=Json');
 putenv('jsonDBDir=Database');
@@ -23,9 +23,9 @@ putenv('MEMORY_LIMIT=512M');
 
 putenv('TIMEZONE=Asia/Tehran');
 
-#Leave This vars blanc ,if you don't have access to shoping part of AnarchyService_Bot
+#Leave This vars blanc ,if you don't using shoping part of Bot
 
-putenv('DOMAIN=https://anarchyservice.xyz');
+putenv('DOMAIN=https://DyarWeb.Com');
 putenv('AFFILIATES_DAYS=10');
 putenv('MERCHANT_ID=xxx-xxx-xxx-xxx');
 putenv('PAYGATE=zarinpl');
