First Stable Version

--- a/env.php.example
+++ b/env.php.example
@@ -16,7 +16,7 @@ putenv('CHANNEL_USERNAME=DyarWeb');
 
 putenv('BOT_USERNAME=DyarWeb_bot');
 
-putenv('DB=Json');
+putenv('DB=json');
 putenv('jsonDBDir=Database');
 
 putenv('MEMORY_LIMIT=512M');
